[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/Blob.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/blob/blob_die_0.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/blob/blob_die_1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/blob/blob_die_2.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/blob/blob_walk_0.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/blob/blob_walk_1.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/blob/blob_walk_2.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/blob/blob_walk_3.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/blob/blob_jump_0.png" type="Texture" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": false,
"name": "die",
"speed": 15.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6, 2 )

[node name="Blob" type="KinematicBody2D"]
position = Vector2( 0, -8 )
collision/safe_margin = 0.01
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 6 )
shape = SubResource( 2 )

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2( -5, 7 )
cast_to = Vector2( 0, 2 )

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2( 6, 7 )
cast_to = Vector2( 0, 2 )
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
